# laborator-rust-2023

./: .gitignore
laborator1/: Cargo.toml
laborator1/src/: main.rs
laborator10/: Cargo.toml
laborator10/src/: Cache.rs  main.rs
laborator11/: Cargo.toml
laborator11/src/: generic_writer.rs  main.rs  writer.rs
laborator2/p1/src/: main.rs
laborator2/p2/src/: main.rs
laborator2/p3/src/: main.rs
laborator3/p1/src/: main.rs
laborator3/p2/src/: main.rs
laborator3/p3/src/: main.rs
laborator3/p3bonus/: Cargo.toml
laborator3/p3bonus/src/: main.rs
laborator3/p4/src/: main.rs
laborator3/p4bonus/: Cargo.toml
laborator3/p4bonus/src/: main.rs
laborator3/p5/src/: main.rs
laborator3/p5bonus/: Cargo.toml
laborator3/p5bonus/src/: main.rs
laborator4/p1/src/: main.rs
laborator4/p2/: Cargo.toml
laborator4/p2/src/: main.rs
laborator4/p3/src/: main.rs  text.txt
laborator4/p4/src/: host_copy.txt  main.rs
laborator5/p1/src/: main.rs
laborator5/p2/src/: main.rs
laborator5/p3/: Cargo.toml
laborator5/p3/src/: main.rs
laborator6/p1/src/: input.txt  main.rs
laborator6/p2/: Cargo.toml  bookmarks.db
laborator6/p2/src/: input.txt  main.rs
laborator7/p1/src/: main.rs
laborator8/p1/src/: main.rs
laborator8/p2/: Cargo.toml
laborator8/p2/src/: main.rs
laborator9/: cargo.toml
laborator9/base64/src/: lib.rs
laborator9/encoder/: Cargo.toml  cat_result.txt
laborator9/encoder/src/: main.rs  os.rs  test.rs
project/redditor/: Cargo.toml  funny-hot
project/redditor/src/: Reddit.rs  args.rs  errors.rs  main.rs
