[package]
name = "redditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1"
ureq = "2.9.1"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.51"
